AutoConfiguration 설정 + 프로퍼티 및 일부 기능 추가
- 프로퍼티로 마스킹 문자 설정
- 프로퍼티로 텍스트파일 추가
- 단어 추가 및 삭제, 마스킹 문사 변경, 비속어 미포함여부 기능 추가
- BadWord..Exception 추가

--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,8 @@ plugins {
 }
 
 group 'com.yjkim.badword'
-version '1.0-SNAPSHOT'
+version '0.1'
+sourceCompatibility = '17'
 
 repositories {
     mavenCentral()
@@ -12,13 +13,11 @@ repositories {
 dependencies {
 
     implementation spring.starter.web
-
+    implementation spring.starter.test
     implementation commons.lang3
 
-    implementation libs.lombok
-
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    compileOnly libs.lombok
+    annotationProcessor libs.lombok
 }
 
 test {
