--- a/settings.gradle
+++ b/settings.gradle
@@ -130,5 +130,11 @@ dependencyResolutionManagement {
             alias('s3').to('software.amazon.awssdk:s3:2.20.24')
             alias('ec2').to('software.amazon.awssdk:ec2:2.20.24')
         }
+
+
+        tester {
+            alias('junit-api').to('org.junit.jupiter:junit-jupiter-api:5.8.1')
+            alias('junit-engine').to('org.junit.jupiter:junit-jupiter-engine:5.8.1')
+        }
     }
 }
